Create word document generator

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 ################################################################################
 
 /CAZ Project
+/Xappy
+/xamarin-mvvm-demo
+/UnboxedList
+/Senior_Design
+/FinancialServiceDatabaseProject
+/ePortfolio
+/EECE3093C-SP22-Lab1
