--- a/XSLT.WordDocument.Generator/XSLT.WordDocument.Generator/XSLT.WordDocument.Generator.csproj
+++ b/XSLT.WordDocument.Generator/XSLT.WordDocument.Generator/XSLT.WordDocument.Generator.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Enums\DocumentName.cs" />
     <Compile Include="Enums\DocumentType.cs" />
     <Compile Include="Program.cs" />
@@ -55,16 +56,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Generated\FormattedEquations.docx" />
     <None Include="Generated\MyMovies.docx" />
     <None Include="Generated\SimpleEquations.docx" />
     <None Include="packages.config" />
+    <None Include="Template\BlankTemplate.docx" />
     <None Include="Template\MyMoviesTemplate.docx" />
     <None Include="Template\SimpleEquationsTemplate.docx" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Data\FormattedEquations.xml" />
     <Content Include="Data\MyMovies.xml" />
     <Content Include="Data\SimpleEquations.xml" />
+    <Content Include="XSLT\FormattedEquations.xslt" />
     <Content Include="XSLT\MyMovies.xslt" />
     <Content Include="XSLT\SimpleEquations.xslt" />
   </ItemGroup>
