--- a/XSLT.WordDocument.Generator/XSLT.WordDocument.Generator/XSLT.WordDocument.Generator.csproj
+++ b/XSLT.WordDocument.Generator/XSLT.WordDocument.Generator/XSLT.WordDocument.Generator.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Models\Variables.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XSLT.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
